--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,47 @@
-version: '3.3'
-
+version: '3.6'
 services:
-  nginx:
-    image: nginx
-    container_name: nginx-dev
-    ports:
-      - "80:80"
-    volumes:
-      - ./conf/nginx/conf.d:/etc/nginx/conf.d
-      - ./www:/usr/share/nginx/html
 
-  php:
-    image: devel-php:latest
-    container_name: php-dev
+  wordpress:
+    image: wordpress:${WORDPRESS_VERSION:-php7.4-fpm}
+    container_name: wordpress
     volumes:
-      - ./conf/php/php.ini:/usr/local/etc/php/php.ini
-      - ./www:/usr/share/nginx/html
+      - ./www:/var/www/html
+    environment:
+      - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME:-wordpress}
+      - WORDPRESS_TABLE_PREFIX=${WORDPRESS_TABLE_PREFIX:-wp_}
+      - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST:-mysql}
+      - WORDPRESS_DB_USER=${WORDPRESS_DB_USER:-root}
+      - WORDPRESS_DB_PASSWORD=${WORDPRESS_DB_PASSWORD:-password}
+    depends_on:
+      - mysql
+    restart: always
 
   mysql:
-    image: mysql:5.7
-    container_name: mysql-dev
+    image: mariadb:${MARIADB_VERSION:-latest}
+    container_name: mysql
     ports:
-      - "3306:3306"
+      - '3306:3306'
     volumes:
-      - ./data:/var/lib/mysql
+      - ./mysql:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: rootpass
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-password}
+      - MYSQL_USER=${MYSQL_USER:-root}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-password}
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-wordpress}
+    restart: always
 
-volumes:
-    data:
+  nginx:
+    image: nginx:${NGINX_VERSION:-latest}
+    container_name: nginx
+    ports:
+      - '80:80'
+      - '443:443'
+    volumes:
+      - ${NGINX_CONF_DIR:-./nginx}:/etc/nginx/conf.d
+      - ${NGINX_LOG_DIR:-./logs/nginx}:/var/log/nginx
+      - ${WORDPRESS_DATA_DIR:-./wordpress}:/var/www/html
+      - ${SSL_CERTS_DIR:-./certs}:/etc/letsencrypt
+      - ${SSL_CERTS_DATA_DIR:-./certs-data}:/data/letsencrypt
+    depends_on:
+      - wordpress
+    restart: always
