--- a/nginx/snippets/ssl.conf
+++ b/nginx/snippets/ssl.conf
@@ -1,2 +1,2 @@
-ssl_certificate /etc/certs/wodevel.crt;
-ssl_certificate_key /etc/certs/wodevel.key;
+ssl_certificate /etc/certs/localhost.crt;
+ssl_certificate_key /etc/certs/localhost.key;
