--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,13 +1,13 @@
 server {
 	listen 80;
 	listen [::]:80;
-	server_name wodevel.local;
+	server_name dev.local;
   return 302 https://$server_name$request_uri;
 }
 server {
 	listen      443 ssl http2;
 	listen [::]:443 ssl http2;
-	server_name wodevel.local;
+	server_name dev.local;
 
 	root /var/www/html;
 	index index.php;
